--- a/interfaces/options.html
+++ b/interfaces/options.html
@@ -96,7 +96,7 @@
 					<div class="tsd-signature tsd-kind-icon">chain<wbr>Id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/b86a281/packages/sdk/src/index.ts#L13">index.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/index.ts#L15">index.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -106,7 +106,7 @@
 					<div class="tsd-signature tsd-kind-icon">license<wbr>Address<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/b86a281/packages/sdk/src/index.ts#L14">index.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/index.ts#L16">index.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -142,6 +142,9 @@
 				<ul class="after-current">
 					<li class=" tsd-kind-type-alias">
 						<a href="../globals.html#provider" class="tsd-kind-icon">Provider</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../globals.html#signer" class="tsd-kind-icon">Signer</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../globals.html#erc20abi" class="tsd-kind-icon">erc20ABI</a>
