[ci skip] Updates

--- a/index.html
+++ b/index.html
@@ -244,11 +244,20 @@ yarn doc:publish
 					<li class=" tsd-kind-variable">
 						<a href="globals.html#licenseabi" class="tsd-kind-icon">licenseABI</a>
 					</li>
-					<li class=" tsd-kind-function">
-						<a href="globals.html#create" class="tsd-kind-icon">create</a>
+					<li class=" tsd-kind-variable">
+						<a href="globals.html#licensecontractaddress" class="tsd-kind-icon">license<wbr>Contract<wbr>Address</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="globals.html#multicallabi" class="tsd-kind-icon">multi<wbr>CallABI</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="globals.html#multicallcontractaddress" class="tsd-kind-icon">multi<wbr>Call<wbr>Contract<wbr>Address</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="globals.html#supportedchainids" class="tsd-kind-icon">supported<wbr>Chain<wbr>Ids</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="globals.html#getlicenseaddress" class="tsd-kind-icon">get<wbr>License<wbr>Address</a>
+						<a href="globals.html#create" class="tsd-kind-icon">create</a>
 					</li>
 				</ul>
 			</nav>
@@ -264,10 +273,11 @@ yarn doc:publish
 				<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
 			</ul>
 			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
+				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private property</span></li>
+				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private method</span></li>
 			</ul>
 			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private property</span></li>
+				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
 			</ul>
 		</div>
 	</div>
