--- a/classes/licenseclient.html
+++ b/classes/licenseclient.html
@@ -93,6 +93,7 @@
 						<section class="tsd-index-section ">
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-private"><a href="licenseclient.html#_issupplyavailable" class="tsd-kind-icon">#is<wbr>Supply<wbr>Available</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="licenseclient.html#checklicense" class="tsd-kind-icon">check<wbr>License</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="licenseclient.html#haslicense" class="tsd-kind-icon">has<wbr>License</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="licenseclient.html#purchaseproduct" class="tsd-kind-icon">purchase<wbr>Product</a></li>
@@ -114,7 +115,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/client.ts#L11">client.ts:11</a></li>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/client.ts#L6">client.ts:6</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -136,13 +137,45 @@
 					<div class="tsd-signature tsd-kind-icon">license<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Contract</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/client.ts#L12">client.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/client.ts#L7">client.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Methods</h2>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-private">
+					<a name="_issupplyavailable" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagPrivate">Private</span> #is<wbr>Supply<wbr>Available</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-private">
+						<li class="tsd-signature tsd-kind-icon">#is<wbr>Supply<wbr>Available<span class="tsd-signature-symbol">(</span>projectID<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">BigNumberish</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/client.ts#L128">client.ts:128</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Check if license supply is available</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>projectID: <span class="tsd-signature-type">BigNumberish</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>Valist Project ID</p>
+									</div>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<p>Boolean value to indicate if supply is present or not</p>
+						</li>
+					</ul>
+				</section>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
 					<a name="checklicense" class="tsd-anchor"></a>
 					<h3>check<wbr>License</h3>
@@ -153,7 +186,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/client.ts#L84">client.ts:84</a></li>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/client.ts#L95">client.ts:95</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -191,7 +224,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/client.ts#L102">client.ts:102</a></li>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/client.ts#L117">client.ts:117</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -215,7 +248,7 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">&gt;</span></h4>
-							<p>Boolean value to indicate license is present or not</p>
+							<p>Boolean value to indicate if license is present or not</p>
 						</li>
 					</ul>
 				</section>
@@ -229,7 +262,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/client.ts#L21">client.ts:21</a></li>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/client.ts#L16">client.ts:16</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -267,7 +300,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/client.ts#L43">client.ts:43</a></li>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/client.ts#L46">client.ts:46</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -324,6 +357,9 @@
 							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-private">
 								<a href="licenseclient.html#license" class="tsd-kind-icon">license</a>
 							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-private">
+								<a href="licenseclient.html#_issupplyavailable" class="tsd-kind-icon">#is<wbr>Supply<wbr>Available</a>
+							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="licenseclient.html#checklicense" class="tsd-kind-icon">check<wbr>License</a>
 							</li>
@@ -355,11 +391,20 @@
 					<li class=" tsd-kind-variable">
 						<a href="../globals.html#licenseabi" class="tsd-kind-icon">licenseABI</a>
 					</li>
-					<li class=" tsd-kind-function">
-						<a href="../globals.html#create" class="tsd-kind-icon">create</a>
+					<li class=" tsd-kind-variable">
+						<a href="../globals.html#licensecontractaddress" class="tsd-kind-icon">license<wbr>Contract<wbr>Address</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../globals.html#multicallabi" class="tsd-kind-icon">multi<wbr>CallABI</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../globals.html#multicallcontractaddress" class="tsd-kind-icon">multi<wbr>Call<wbr>Contract<wbr>Address</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../globals.html#supportedchainids" class="tsd-kind-icon">supported<wbr>Chain<wbr>Ids</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../globals.html#getlicenseaddress" class="tsd-kind-icon">get<wbr>License<wbr>Address</a>
+						<a href="../globals.html#create" class="tsd-kind-icon">create</a>
 					</li>
 				</ul>
 			</nav>
@@ -375,10 +420,11 @@
 				<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
 			</ul>
 			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
+				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private property</span></li>
+				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private method</span></li>
 			</ul>
 			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private property</span></li>
+				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
 			</ul>
 		</div>
 	</div>
