--- a/interfaces/options.html
+++ b/interfaces/options.html
@@ -96,7 +96,7 @@
 					<div class="tsd-signature tsd-kind-icon">chain<wbr>Id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/index.ts#L15">index.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/index.ts#L19">index.ts:19</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -106,7 +106,7 @@
 					<div class="tsd-signature tsd-kind-icon">license<wbr>Address<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/index.ts#L16">index.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/462e5cc/packages/sdk/src/index.ts#L20">index.ts:20</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -152,11 +152,20 @@
 					<li class=" tsd-kind-variable">
 						<a href="../globals.html#licenseabi" class="tsd-kind-icon">licenseABI</a>
 					</li>
-					<li class=" tsd-kind-function">
-						<a href="../globals.html#create" class="tsd-kind-icon">create</a>
+					<li class=" tsd-kind-variable">
+						<a href="../globals.html#licensecontractaddress" class="tsd-kind-icon">license<wbr>Contract<wbr>Address</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../globals.html#multicallabi" class="tsd-kind-icon">multi<wbr>CallABI</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../globals.html#multicallcontractaddress" class="tsd-kind-icon">multi<wbr>Call<wbr>Contract<wbr>Address</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../globals.html#supportedchainids" class="tsd-kind-icon">supported<wbr>Chain<wbr>Ids</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../globals.html#getlicenseaddress" class="tsd-kind-icon">get<wbr>License<wbr>Address</a>
+						<a href="../globals.html#create" class="tsd-kind-icon">create</a>
 					</li>
 				</ul>
 			</nav>
@@ -172,10 +181,11 @@
 				<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
 			</ul>
 			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
+				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private property</span></li>
+				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private method</span></li>
 			</ul>
 			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private property</span></li>
+				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
 			</ul>
 		</div>
 	</div>
