[ci skip] Updates

--- a/index.html
+++ b/index.html
@@ -64,10 +64,15 @@
 	<div class="row">
 		<div class="col-8 col-content">
 			<div class="tsd-panel tsd-typography">
-				<p><a href="https://raw.githubusercontent.com/valist-io/valist/main/img/logo-header.png" title="valist"><img src="https://raw.githubusercontent.com/valist-io/valist/main/img/logo-header.png" alt="valist" title="valist"></a></p>
+				<div align="center">
+					<img src="https://raw.githubusercontent.com/pawanpaudel93/valist-software-license/main/logo.png" alt="Valist Software License SDK" />
+				</div>
 				<a href="#valist-software-license-lightweight-sdk" id="valist-software-license-lightweight-sdk" style="color: inherit; text-decoration: none;">
 					<h1>Valist Software License lightweight SDK</h1>
 				</a>
+				<p>
+					<img alt="Version" src="https://img.shields.io/badge/version-0.0.5-blue.svg?cacheSeconds=2592000" />
+				</p>
 				<a href="#about" id="about" style="color: inherit; text-decoration: none;">
 					<h2>About</h2>
 				</a>
